--- a/styles/modules/Navbar.module.css
+++ b/styles/modules/Navbar.module.css
@@ -40,30 +40,68 @@ padding-top: 30px;
     width: 50%;
     height: fit-content;
   text-align: center;
+  cursor: pointer;
+  background-color: #fff;
 }
 
 .link_home {
-  background-color: var(--color-home);
+  box-shadow: 0 0 40px 40px var(--color-home) inset, 0 0 0 0 var(--color-home);
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+.link_home:hover {
+  box-shadow: 0 0 20px 0 hsl(203, 92%, 65%) inset, 0 0 20px 4px hsl(203, 92%, 65%);
+  z-index: 1;
 }
 
 .link_about {
-  background-color: var(--color-about);
+  box-shadow: 0 0 40px 40px var(--color-about) inset, 0 0 0 0 var(--color-about);
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+.link_about:hover {
+  box-shadow: 0 0 20px 0 hsl(16, 100%, 40%) inset, 0 0 20px 4px hsl(16, 100%, 40%);
+  z-index: 1;
 }
 
 .link_certificates {
-  background-color: var(--color-certificates)
+  box-shadow: 0 0 40px 40px var(--color-certificates) inset, 0 0 0 0 var(--color-certificates);
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+.link_certificates:hover {
+  box-shadow: 0 0 20px 0 hsl(120, 61%, 40%) inset, 0 0 20px 4px hsl(120, 61%, 40%);
+  z-index: 1;
 }
 
 .link_projects {
-  background-color: var(--color-projects);
+  box-shadow: 0 0 40px 40px var(--color-projects) inset, 0 0 0 0 var(--color-projects);
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+.link_projects:hover {
+  box-shadow: 0 0 20px 0 hsl(210, 100%, 46%) inset, 0 0 20px 4px hsl(210, 100%, 46%);
+  z-index: 1;
 }
 
 .link_notes {
-  background-color: var(--color-notes);
+  box-shadow: 0 0 40px 40px var(--color-notes) inset, 0 0 0 0 var(--color-notes);
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+.link_notes:hover {
+  box-shadow: 0 0 20px 0 hsl(30, 59%, 43%) inset, 0 0 20px 4px hsl(30, 59%, 43%);
+  z-index: 1;
 }
 
 .link_apps {
-  background-color: var(--color-apps);
+  box-shadow: 0 0 40px 40px var(--color-apps) inset, 0 0 0 0 var(--color-apps);
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+.link_apps:hover {
+  box-shadow: 0 0 20px 0 hsl(33, 100%, 40%) inset, 0 0 20px 4px hsl(33, 100%, 40%);
+  z-index: 1;
 }
 
 .icon_svg{
