--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -15,8 +15,8 @@
   width: 160px;
   height: 160px;
   border-radius: 50%;
-  border: solid 4px lightgrey;
-  box-shadow: 5px 5px 10px lightgrey;
+  border: solid 4px var(--color-main-background);
+  box-shadow: 5px 5px 10px var(--color-main-background);
   align-self: center;
 }
 
@@ -32,6 +32,7 @@
   flex-grow: 1;
   text-align: center;
   padding-top: 30px;
+  /* border-bottom: dashed 2px var(--color-text-title); */
 }
 
 .field_links {
@@ -51,7 +52,7 @@
   height: fit-content;
   text-align: center;
   cursor: pointer;
-  background-color: #fff;
+  background-color: var(--color-main-background);
 }
 
 .link_home {
@@ -71,8 +72,8 @@
   transition: all 300ms ease-in-out;
 }
 .link_about:hover {
-  box-shadow: 0 0 20px 0 hsl(16, 100%, 40%) inset,
-    0 0 20px 4px hsl(16, 100%, 40%);
+  box-shadow: 0 0 20px 0 hsl(17, 100%, 64%) inset,
+    0 0 20px 4px hsl(17, 100%, 64%);
   z-index: 1;
 }
 
@@ -122,7 +123,7 @@
 }
 
 .icon_svg {
-  fill: var(--color-text-title);
+  color: var(--color-text-title);
   font-size: 27px;
   margin-right: 5px;
 }
