--- a/styles/modules/NavbarLinks.module.css
+++ b/styles/modules/NavbarLinks.module.css
@@ -1,86 +1,76 @@
-/* Dropdown Button */
 .dropbtn {
-    background-color: #04AA6D;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-  }
+  background-color: #04AA6D;
+  color: white;
+  padding: 5px 10px 5px 5px;
+  margin: 5px 0;
+  font-size: 14px;
+  border: none;
+  border-bottom:solid 2px black;
+  border-right:solid 2px grey;
+  /* border-radius: 70%; */
+  border-top-right-radius : 100%;
+  border-top-left-radius : 50%;
+  border-bottom-right-radius : 100%;
+  border-bottom-left-radius : 50%;
+  box-shadow: 4px 2px 16px 0px rgba(0,0,0,0.8);
+}
 
-  .dropbtn_sub {
-    background-color: #aa8e04;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    width: 200px;
-    height: 50px;
-    border: none;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown,
-  .dropdown_sub {
-    position: relative;
-    display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown_content,
-  .dropdown_content_sub {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
 
-  .dropdown_content_sub {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    margin-left: 200px;
-    margin-top: -50px;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown_content a,
-  .dropdown_content_sub a  {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown_content a:hover,
-  .dropdown_content_sub a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown_content,
-  .dropdown_sub:hover .dropdown_content_sub  {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn,
-  .dropdown_sub:hover .dropbtn_sub {background-color: #3e8e41;}
+/* Dropdown Content (Hidden by Default) */
+.dropdown_content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  /* min-width: 160px; */
+  min-width: max-content;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
 
+/* Links inside the dropdown */
+/* .dropdown_content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+} */
 
+/* Change color of dropdown links on hover */
+/* .dropdown_content a:hover {background-color: #ddd;} */
+.dropdown_content .nav_link:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown_content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+.nav_link {
+  color: black;
+  padding: 5px 10px;
+  text-decoration: none;
+  display: block;
+}
   /* /////////////////////////////////////// */
 
   .nav_background{
     margin: 0 50px;
-    background-color: blanchedalmond;
+    background-color: rgba(255, 235, 205, 0.4);
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    gap: 10px 50px;
+    gap: 10px 40px;
   }
 
   .link_head{
     position: relative;
     display: inline-block;
+    padding: 0 10px;
   }
 
   .link_body{
@@ -88,6 +78,8 @@
     position: absolute;
     background-color:  blanchedalmond;
     padding: 0 10px;
+    margin: 0;
+    width:max-content;
   }
 
   .link_head:hover .link_body{
@@ -96,4 +88,16 @@
 
   .link_head:hover{
     background-color: #04AA6D;
+  }
+
+  .nav_list {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+  }
+
+  .nav_list_link {
+    background-color: red;
+  display: block;
+  text-decoration: none;
   }
