--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@
 --color-apps: DarkOrange; /*hsl(33, 100%, 50%) DarkOrange*/
 --color-nav-image: Silver;
 --color-text-title: #5b4f3f;
+--color-main-header: silver;
 --color-main-background: azure;
 
 }
