--- a/styles/modules/NavbarLinks.module.css
+++ b/styles/modules/NavbarLinks.module.css
@@ -1,18 +1,18 @@
 .dropbtn {
-  background-color: #04AA6D;
+  background-color: #04aa6d;
   color: white;
   padding: 5px 10px 5px 5px;
   margin: 5px 0;
   font-size: 14px;
   border: none;
-  border-bottom:solid 2px black;
-  border-right:solid 2px grey;
+  border-bottom: solid 2px black;
+  border-right: solid 2px grey;
   /* border-radius: 70%; */
-  border-top-right-radius : 100%;
-  border-top-left-radius : 50%;
-  border-bottom-right-radius : 100%;
-  border-bottom-left-radius : 50%;
-  box-shadow: 4px 2px 16px 0px rgba(0,0,0,0.8);
+  border-top-right-radius: 100%;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 100%;
+  border-bottom-left-radius: 50%;
+  box-shadow: 4px 2px 16px 0px rgba(0, 0, 0, 0.8);
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -28,27 +28,26 @@
   background-color: #f1f1f1;
   /* min-width: 160px; */
   min-width: max-content;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
-/* Links inside the dropdown */
-/* .dropdown_content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-} */
-
 /* Change color of dropdown links on hover */
 /* .dropdown_content a:hover {background-color: #ddd;} */
-.dropdown_content .nav_link:hover {background-color: #ddd;}
+.dropdown_content .nav_link:hover {
+  background-color: #ddd;
+}
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown_content {display: block;}
+.dropdown:hover .dropdown_content {
+  display: block;
+}
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+/* Change the background color of the dropdown button
+when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
 
 .nav_link {
   color: black;
@@ -56,48 +55,46 @@
   text-decoration: none;
   display: block;
 }
-  /* /////////////////////////////////////// */
+/* /////////////////////////////////////// */
 
-  .nav_background{
-    margin: 0 50px;
-    background-color: rgba(255, 235, 205, 0.4);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px 40px;
-  }
+/* appears on the top when the mouse enters the "nav_body",
+when the mouse enters the element the dropdown list is closes */
+.leave_nav_top {
+  position: absolute;
+  top: 1;
+  height: 10px;
+  width: 100%;
+}
 
-  .link_head{
-    position: relative;
-    display: inline-block;
-    padding: 0 10px;
-  }
+/* creates a gab on the top of the dropdown list so that
+when the "leave_nav_top" is set to display,
+the mouse does not trigger the close dropdown straight away */
+.nav_top_gap {
+  height: 25px;
+}
 
-  .link_body{
-    display: none;
-    position: absolute;
-    background-color:  blanchedalmond;
-    padding: 0 10px;
-    margin: 0;
-    width:max-content;
-  }
+.nav_body {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0 10px;
+}
 
-  .link_head:hover .link_body{
-    display: block;
-  }
+.list_header {
+  text-decoration: underline;
+  letter-spacing: 0.2ch;
+  font-size: medium;
+  text-align: center;
+  width: 100%;
+}
 
-  .link_head:hover{
-    background-color: #04AA6D;
-  }
-
-  .nav_list {
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-  }
-
-  .nav_list_link {
-    background-color: red;
-  display: block;
-  text-decoration: none;
-  }
+/* the last element in the dropdown list which closes the
+dropdown when the mouse hovers over the element */
+.leave_nav_bottom {
+  position: absolute;
+  height: 100vh;
+  /* the margin creates a gap to make it easier to get to
+  the links without closing the dropdown */
+  margin: 80px 0;
+  width: 100%;
+}
